fix: change buttons & links contrast to improve accessibility

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -16,7 +16,7 @@
 .primary {
   font-weight: 700;
   background-color: var(--color-brand--2);
-  color: var(--color-light--2);
+  color: var(--color-dark--0);
 }
 
 .back {
